# sp_cstring

./: CMakeLists.txt  Makefile  README.md
include/sp/: cstring.h
src/sp/: cstring.c
tests/: main.c  test_cstring.c  test_cstring_create.c  test_cstring_erasure.c  test_cstring_insertion.c  test_cstring_modification.c  test_cstring_operations.c  tests.h
